<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="action_search">Search</string>
    <string name="action_Delete">Delete</string>
    <string name="action_log">Log</string>
    <string name="action_close">Close</string>
    <string name="action_clear">Clear</string>
    <string name="action_back">back</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="decimal">.</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="division">/</string>
    <string name="multip">X</string>
    <string name="equal">=</string>
    <string name="clear">CLR</string>
    <string name="back">back</string>
    <string name="onebyX">1/x</string>
    <string name="sqrt">sqrt</string>
    <string name="mode">%</string>
    <string name="zero">0</string>
    <string name="Delete">Delete</string>
    <string name="open">(</string>
    <string name="close">)</string>
    <string name="Log">Log</string>
    <string name="title_activity_log_display">Log</string>
    <string name="title_activity_log__display_">Log</string>
    <string name="Back">Back</string>
    <string name="Expression">Expression Mode</string>
    <string name="Simple">Simple Mode</string>
    <string name="Clear">Clear Log</string>
    <string name="Exit">Exit</string>
	<string name="History">History</string>	
	<string name="history_clear_msg">History Cleared</string>
	<string name="search_text">Search by Text </string>
	<string name="search_by_date">Search by Date</string>
	<string name="search_bt_dates">Search between Dates</string>
	<string name="date_format">dd-MM-yy \n HH:mm:ss</string>
	<string name="simple_date">dd-MM-yy</string>
	<string name="loading_msg">Loading.. Please wait...</string>
	<string name="syntax_error">Syntax Error</string>
	<string name="infinity">Infinity</string>
	<string name="select_valid_option">Select a valid option</string>
	<string name="expression_saved_status">Expression saved successfully</string>
</resources>